# flacoutcpp

./: .clang-tidy  .cppcheck  .cppcheck-suppress  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  run_tests.sh  test.flac  test2.flac  test2_opt.flac  test_opt.flac  test_overflow  test_overflow.cpp  test_threads  test_threads.cpp
.github/workflows/: ci.yml  cmake.yml
include/: bitwriter.hpp  flacoutcpp.hpp  frame_writer.hpp  md5.hpp  optimizer.hpp  processor.hpp
src/: bitwriter.cpp  flacoutcpp.cpp  frame_writer.cpp  main.cpp  optimizer.cpp  processor.cpp
